--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,8 +1,5 @@
-# Erlang version
-erlang_version=18.2.1
-
 # Elixir version
 elixir_version=1.5.0
 
 # Always rebuild from scratch on every deploy?
-always_rebuild=false
+always_rebuild=true
