--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 # The directory Mix will write compiled artifacts to.
-/_build/
+server/_build/
 
 # If you run "mix test --cover", coverage assets end up here.
-/cover/
+server/cover/
 
 # The directory Mix downloads your dependencies sources to.
-/deps/
+server/deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
+server/doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
-/.fetch
+server/.fetch
 
 # If the VM crashes, it generates a dump, let's ignore it too.
-erl_crash.dump
+server/erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-config/prod.exs
+server/config/prod.exs
