--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "quagga": "^0.12.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
