--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,6 +11,7 @@ rules: {
   "object-curly-spacing": ["error", "always"],
   "react/jsx-uses-react": "error",
   },
+  "parser": "babel-eslint",
   parserOptions: {
     ecmaVersion: 2017,
     sourceType: "module",
