--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.18.0",
     "quagga": "^0.12.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
