--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,11 @@
     "quagga": "^0.12.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "webrtc-adapter": "^6.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "build-prod": "node_modules/.bin/react-scripts build",
     "test": "react-scripts test --env=jsdom",
