--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.5",
     "quagga": "^0.12.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
