--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "prettier": "^1.12.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux-devtools-extension": "^2.13.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,7 +19,9 @@
     "quagga": "^0.12.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
     "webrtc-adapter": "^6.1.5"
   },
   "scripts": {
