--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "connected-react-router": "^6.1.0",
+    "history": "^4.7.2",
     "jsbarcode": "^3.9.0",
     "quagga": "^0.12.1",
     "ramda": "^0.26.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
