--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^6.1.0",
+    "date-fns": "^1.30.1",
     "history": "^4.7.2",
     "jsbarcode": "^3.9.0",
     "quagga": "^0.12.1",
