--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs:
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
+
+      - image: circleci/postgres:9.4
 
     working_directory: ~/repo
     steps:
@@ -21,4 +22,5 @@ jobs:
       - run: cd server
       - run: mix deps.get
       - run: mix ecto.create
+      - run: mix ecto.migrate
       - run: mix test
