--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,24 @@ jobs:
   build:
     docker:
       # specify the version here
-      - image: circleci/elixir:1.4
+      - image: circleci/elixir:1.6
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
 
       - image: circleci/postgres:9.4
+        environment:
+          POSTGRES_USER: postgres
 
     working_directory: ~/repo
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: cd server
-      - run: mix deps.get
-      - run: mix ecto.create
-      - run: mix ecto.migrate
-      - run: mix test
+      - run: cd server && mix local.hex --force
+      - run: cd server && mix local.rebar --force
+      - run: cd server && mix deps.get
+      - run: cd server && MIX_ENV="test" mix ecto.create
+      - run: cd server && MIX_ENV="test" mix ecto.migrate
+      - run: cd server && mix test
