🚑  migration missing brackets fix 🚧  CI: set port in test command 🚧 run integration tests over http

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,4 @@ jobs:
       - run: cd server && mix deps.get
       - run: cd server && MIX_ENV="test" mix ecto.create
       - run: cd server && MIX_ENV="test" mix ecto.migrate
-      - run: cd server && mix test
+      - run: cd server && PORT=8080 mix test
