--- a/server/elixir_buildpack.config
+++ b/server/elixir_buildpack.config
@@ -3,3 +3,9 @@ elixir_version=1.6.0
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=true
+
+# A command to run right before fetching dependencies
+hook_pre_fetch_dependencies="cd server"
+
+# A command to run right before compiling the app (after elixir, .etc)
+hook_pre_compile="cd server"
