--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -5,7 +5,7 @@ elixir_version=1.6.0
 always_rebuild=true
 
 # A command to run right before fetching dependencies
-hook_pre_fetch_dependencies="cd server"
+# hook_pre_fetch_dependencies="cd server"
 
 # A command to run right before compiling the app (after elixir, .etc)
-hook_pre_compile="cd server"
+# hook_pre_compile="cd server"
