--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
 # The directory Mix will write compiled artifacts to.
-server/_build/
+_build/
 
 # If you run "mix test --cover", coverage assets end up here.
-server/cover/
+cover/
 
 # The directory Mix downloads your dependencies sources to.
-server/deps/
+deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-server/doc/
+doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
-server/.fetch
+.fetch
 
 # If the VM crashes, it generates a dump, let's ignore it too.
-server/erl_crash.dump
+erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-server/config/prod.exs
 .netlify
-server/priv/keys
+priv/keys
